--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
               <%= link_to "PennyCloud", '#', id: "logo" %>
               <nav>
                 <ul class="nav pull-right">
-                    <li><%= link_to "About", 'static_pages#about' %></li>
+                    <li><%= link_to "About", about_path %></li>
                 </ul>
               </nav>
             </div>
