--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <title>PenyCloud</title>
+      <title>PennyCloud</title>
      <%= stylesheet_link_tag    "application", :media => "all" %>
      <%= javascript_include_tag "application" %>
      <%= csrf_meta_tags %>
@@ -11,7 +11,7 @@
         <header class="navbar navbar-fixed-top">
           <div class="navbar-inner">
             <div class="container">
-              <%= link_to "PennyCloud", '#', id: "logo" %>
+              <%= link_to "PennyCloud", root_path, id: "logo" %>
               <nav>
                 <ul class="nav pull-right">
                     <li><%= link_to "About", about_path %></li>
