ad gm gem for heroku

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,7 +1,5 @@
 <h1>About Us</h1>
 <p>
     <a href="http://pennycloud.co/">PennyCloud.co</a>
-    is a real-time money savinging app.  
-    <a href="http://rubyonrails.org/">Ruby on Rails</a> 
-    in one month. This is the sample application.
+    is a real-time money savinging app. This is the sample application crafted with love.
 </p>
