--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,7 @@
+<% if user_signed_in? %>
+	<h1>Your signed in</h1>
+
+<% else %>
 <div class="center hero-unit">
     <h1>Welcome to PennyCloud</h1>
 
@@ -10,3 +14,4 @@
     <%= link_to "Sign up now!", new_user_registration_path, 
                                 class: "btn btn-large btn-primary" %>
 </div>
+<% end %>
